[tool.poetry]
name = "demo-face-gan"
version = "0.1.0"
description = "Demonstrates creating faces with a GAN"
authors = ["Adrien Treuille <adrien.g.treuille@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<=3.7.16"
streamlit = ">=1.2.0"
tensorflow = ">=1.15.4,<2.0"
scikit_learn = ">=0.20.0"

[tool.poetry.dev-dependencies]
black = "*"  # Pretty formatting of Python code
pynvim = "*" # Allows nvim users to use black formatting

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false

